--- a/apps/site-astro/src/components/SiteHeader.astro
+++ b/apps/site-astro/src/components/SiteHeader.astro
@@ -8,7 +8,7 @@ import { getUrlForSanityType } from "@/lib/url";
 >
   <a href="/"><h2 class="h2 pb-0">Site Name</h2></a>
 
-  <nav class="flex flex-row flex-wrap items-center gap-10 sm:gap-6">
+  <nav class="flex flex-row flex-wrap items-center gap-x-10 gap-y-4 sm:gap-6">
     <a href={getUrlForSanityType("post", "")} class="link"
       >{getSanityTypeDisplayText("post", true)}</a
     >
