--- a/apps/site-astro/src/styles/global.css
+++ b/apps/site-astro/src/styles/global.css
@@ -123,6 +123,10 @@
     @apply scroll-m-20 text-xl font-semibold tracking-tight;
   }
 
+  .p {
+    @apply leading-7 [&:not(:first-child)]:mt-4;
+  }
+
   .blockquote {
     @apply mt-6 border-l-2 pl-6 italic;
   }
