--- a/apps/site-astro/src/pages/resources/[slug].astro
+++ b/apps/site-astro/src/pages/resources/[slug].astro
@@ -7,6 +7,7 @@ import { titleTemplate } from "@/lib/metadata";
 import { getAllResourcesFull } from "@/queries/resource";
 import type { InferGetStaticPropsType } from "astro";
 import type { Backlink } from "@/queries/partials/backlink";
+import { splitIntoLines } from "@/lib/stringUtils";
 
 export async function getStaticPaths() {
   const data = await getAllResourcesFull();
@@ -27,6 +28,7 @@ export async function getStaticPaths() {
 type Props = InferGetStaticPropsType<typeof getStaticPaths>;
 
 const { resource } = Astro.props as Props;
+const descriptionLines = splitIntoLines(resource.description);
 
 // Prevent 'Resource Content' from showing in backlinks section
 // It will already show in the Resources content section
@@ -45,24 +47,31 @@ const renderedBacklinks = resource.backlinks
     description={resource.description}
     slot="metadata"
   />
-  <article class="prose-custom content-container">
-    <h1>{resource.title}</h1>
-    <p>{resource.url}</p>
-
+  <div class="prose-custom content-container">
+    <h1 class="h2">{resource.title}</h1>
     {resource.tags && <TagsList tags={resource.tags} asLinks={true} />}
+    <p><a href={resource.url}>{resource.url}</a></p>
+
+    {descriptionLines.map((line, i) => <p class="p" set:html={line} />)}
 
     <!-- TODO render this as a nice list -->
     <!-- TODO "referenced in" query results to articles, concepts -->
     {
-      resource.resourceContent &&
-        resource.resourceContent.map((rc) => {
-          return (
-            <div>
-              <h3>{rc.title}</h3>
-              <p>{rc.description}</p>
-            </div>
-          );
-        })
+      resource.resourceContent && (
+        <div>
+          {resource.resourceContent.map((rc) => {
+            return (
+              <div>
+                <h3>
+                  {rc.url ? <a href={rc.title}>{rc.title}</a> : <>{rc.title}</>}
+                </h3>
+
+                <p>{rc.description}</p>
+              </div>
+            );
+          })}
+        </div>
+      )
     }
 
     {
@@ -73,5 +82,5 @@ const renderedBacklinks = resource.backlinks
         </>
       )
     }
-  </article>
+  </div>
 </Layout>
