--- a/apps/site-astro/src/components/SiteHeader.astro
+++ b/apps/site-astro/src/components/SiteHeader.astro
@@ -4,7 +4,7 @@ import { getUrlForSanityType } from "@/lib/url";
 ---
 
 <header
-  class="flex flex-col place-content-between items-center gap-4 p-4 sm:flex-row sm:items-end sm:p-6"
+  class="site-header flex flex-col place-content-between items-center gap-4 p-4 sm:flex-row sm:items-end sm:p-6"
 >
   <a href="/"><h2 class="h2 pb-0">Site Name</h2></a>
 
