--- a/apps/site-astro/src/pages/resources/index.astro
+++ b/apps/site-astro/src/pages/resources/index.astro
@@ -27,7 +27,7 @@ const title = getSanityTypeDisplayText("resource", true);
     <h1 class="h2">{title}</h1>
   </header>
 
-  <main class="content-container prose-width">
+  <main class="content-container prose-width" data-pagefind-ignore>
     {
       data && (
         <div class="grid md:grid-cols-2 gap-4 not-prose">
