--- a/apps/site-astro/src/components/SiteSearch.astro
+++ b/apps/site-astro/src/components/SiteSearch.astro
@@ -13,7 +13,7 @@ window.addEventListener("DOMContentLoaded", async (event) => {
 {
   /* Use "/" as the search keyboard shortcut 
   CMD + K is also popular, which can be done with: 
-  if (e.key === "k" && e.metaKey) {  */
+  if (e.key === 'k' && (e.metaKey || e.ctrlKey)) { */
 }
 <script>
   const searchKeyListener = (event: KeyboardEvent) => {
