Added vanilla image zoom

--- a/apps/site-astro/src/layouts/Layout.astro
+++ b/apps/site-astro/src/layouts/Layout.astro
@@ -30,5 +30,6 @@ import SiteSearch from "@/components/SiteSearch.astro";
 
 		<!-- Global scripts -->
 		<script src="src/scripts/popover.ts"></script>
+		<script src="src/scripts/imageZoom.js"></script>
 	</body>
 </html>
