--- a/apps/site-astro/src/components/PortableText/Type.astro
+++ b/apps/site-astro/src/components/PortableText/Type.astro
@@ -8,9 +8,12 @@ import CodeBlock, {
   type Props as CodeBlockProps,
 } from "./custom/CodeBlock.astro";
 import Embed, { type Props as EmbedProps } from "./custom/Embed.astro";
+import PartialInclude, {
+  type Props as PartialIncludeProps,
+} from "./custom/PartialInclude.astro";
 
 // prettier-ignore
-export type Props = CalloutProps | ImageProps | FigureProps | CodeBlockProps | EmbedProps;
+export type Props = CalloutProps | ImageProps | FigureProps | CodeBlockProps | EmbedProps | PartialIncludeProps;
 
 const props = Astro.props;
 const typeIs = (type: string) => type === props.node._type;
@@ -27,6 +30,8 @@ const Cmp = typeIs("callout")
   ? CodeBlock
   : typeIs("embed")
   ? Embed
+  : typeIs("partialInclude")
+  ? PartialInclude
   : getDefaultComponent();
 ---
 
