Setup main header to where I'm satisfied

--- a/apps/site-marketing/src/layouts/Layout.astro
+++ b/apps/site-marketing/src/layouts/Layout.astro
@@ -22,7 +22,7 @@ import SiteSearch from "@/components/SiteSearch.astro";
 			<MetaTags />
 		</slot>
 	</head>
-	<body>
+	<body class="dark">
 		<SiteHeader />
 		<slot />
 
