--- a/apps/site-marketing/src/components/SiteHeader.astro
+++ b/apps/site-marketing/src/components/SiteHeader.astro
@@ -8,7 +8,7 @@ import { Search } from "lucide-react";
   class="site-header flex flex-col place-content-between items-center gap-4 p-4 sm:flex-row sm:items-end sm:p-6"
   data-pagefind-ignore
 >
-  <a href="/"><h2 class="h2 pb-0">Site Name</h2></a>
+  <a href="/" class="site-title"><h2 class="h2 pb-0">Space Madness</h2></a>
 
   <nav class="flex flex-row flex-wrap items-center gap-x-10 gap-y-4 sm:gap-6">
     <a href={getUrlForSanityType("post", "")} class="link"
