--- a/apps/site-marketing/src/pages/docs/[slug].astro
+++ b/apps/site-marketing/src/pages/docs/[slug].astro
@@ -3,7 +3,7 @@ import MetaTags from "@/components/MetaTags.astro";
 import PortableText from "@/components/PortableText/PortableText.astro";
 import BacklinksList from "@/components/content/BacklinksList.astro";
 import TagsList from "@/components/content/TagsList.astro";
-import Layout from "@/layouts/Layout.astro";
+import DocsLayout from "@/layouts/DocsLayout.astro";
 import { titleTemplate } from "@/lib/metadata";
 import { getAllPostsFull } from "@/queries/post";
 import type { InferGetStaticPropsType } from "astro";
@@ -29,7 +29,7 @@ type Props = InferGetStaticPropsType<typeof getStaticPaths>;
 const { post } = Astro.props as Props;
 ---
 
-<Layout>
+<DocsLayout>
   <MetaTags
     title={titleTemplate(post.title)}
     description={post.description}
@@ -50,4 +50,4 @@ const { post } = Astro.props as Props;
       )
     }
   </article>
-</Layout>
+</DocsLayout>
