--- a/apps/site-marketing/src/pages/docs/index.astro
+++ b/apps/site-marketing/src/pages/docs/index.astro
@@ -1,25 +1,32 @@
 ---
 import MetaTags from "@/components/MetaTags.astro";
-import Layout from "@/layouts/Layout.astro";
 import { titleTemplate } from "@/lib/metadata";
-import { getSanityTypeDisplayText } from "@/lib/sanityStrings";
 import { splitIntoLines } from "@/lib/stringUtils";
 import { getUrlForSanityType } from "@/lib/url";
 import { getAllPostsList } from "@/queries/post";
 
+import DocsLayout from "@/layouts/DocsLayout.astro";
+
 const data = await getAllPostsList();
-const title = getSanityTypeDisplayText("post", true);
 ---
 
-<Layout>
+<DocsLayout>
 	<MetaTags
-		title={titleTemplate(title)}
-		description={"My thoughts and musings"}
+		title={titleTemplate("Space Madness Docs")}
+		description={"Learn how to sow and tend to your own digital garden"}
 		slot="metadata"
 	/>
 
 	<header class="prose-width content-container">
-		<h1 class="h2">{title}</h1>
+		<h1 class="h2">Getting Started</h1>
+		<p class="p">
+			Space madness is ready to go out of the box, but there's a lot in that
+			box. This site will help you customize the site to your needs
+		</p>
+		<p class="p">
+			Feel free to browse the articles. Concepts and Guides provide small bits
+			of information that are tied together in articles
+		</p>
 	</header>
 
 	<main
@@ -44,4 +51,4 @@ const title = getSanityTypeDisplayText("post", true);
 				})
 		}
 	</main>
-</Layout>
+</DocsLayout>
