--- a/apps/site-astro/src/components/PortableText/custom/InternalLink.astro
+++ b/apps/site-astro/src/components/PortableText/custom/InternalLink.astro
@@ -76,7 +76,7 @@ const lines = splitIntoLines(markDef.internalLink.description);
 
       <div
         id={uniqueId}
-        class="pt-popover not-prose bg-gray-50 border-2 border-gray-200 rounded-md drop-shadow-lg p-4"
+        class="pt-popover not-prose bg-gray-50 dark:bg-zinc-800 border-2 border-gray-200 dark:border-zinc-700 rounded-md drop-shadow-lg p-4"
         style="display: none;"
       >
         <div class="flex flex-col gap-2 justify-between leading-snug">
