--- a/apps/site-marketing/src/components/PortableText/custom/CodeBlock.astro
+++ b/apps/site-marketing/src/components/PortableText/custom/CodeBlock.astro
@@ -9,11 +9,18 @@ import { TerminalIcon } from "lucide-react";
 export type Props = $<CodeBlock>;
 const { node } = Astro.props;
 
+// Other styles are set in global.css
 const THEME = "github-dark";
-const preClasses = ["px-7 py-6", "rounded-lg", "overflow-x-auto"];
+const preClasses = ["px-5 py-6", "rounded-lg", "overflow-x-auto", "text-sm"];
+const highlightClasses = ["bg-sky-500/[.2]"];
 
 const highlighter = await getHighlighter({
   theme: THEME,
+});
+
+// highlight lines
+const lineOptions = node.highlightedLines?.map((line) => {
+  return { line: line, classes: highlightClasses };
 });
 
 const tokens = highlighter.codeToThemedTokens(node.code, node.language);
@@ -21,6 +28,7 @@ const tokens = highlighter.codeToThemedTokens(node.code, node.language);
 const htmlString = shiki.renderToHtml(tokens, {
   fg: highlighter.getForegroundColor(THEME),
   bg: highlighter.getBackgroundColor(THEME),
+  lineOptions: lineOptions,
   elements: {
     pre({ className, style, children }) {
       return `<pre class="${cn(
